@@ -16,6 +16,7 @@
 * Update notification generator to better match current notification class [lulalala]
 * Paymill gateway: Change .com -> .de [louiskearns]
 * Quickpay integration: Fix v6 response parsing [larspind]
+* First Data e4: Add TransArmor store/tokenization support [gabetax]
 
 == Version 1.32.1 (April 4, 2013)
 
